webview not redrawn as needed when accelerated compositing is enabled. https://bugs.webkit.org/show_bug.cgi?id=99109

Patch by Arnaud Renevier <a.renevier@sisa.samsung.com> on 2012-10-29
Reviewed by Martin Robinson.

GL shared display is not in the gtk loop and therefore, its events are
not captured by gtk. So, we use gdk default instead.

No new tests, covered by existing tests.

* platform/gtk/RedirectedXCompositeWindow.cpp:
(WebCore::RedirectedXCompositeWindow::RedirectedXCompositeWindow):
(WebCore::RedirectedXCompositeWindow::~RedirectedXCompositeWindow):
(WebCore::RedirectedXCompositeWindow::resize):

Canonical link: https://commits.webkit.org/118716@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132823 268f45cc-cd09-0410-ab3c-d52691b4dbfc